{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 17,
  "lineage": "97245136-4fc1-8298-814a-62fb794f2050",
  "resources": [
    {
      "module": "module.ni-module",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip-dat-bl",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pi01",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/publicIPAddresses/sapanpip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.91.220.164",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "sapanpip-1",
            "resource_group_name": "sapanrg-1",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.ni-module",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet-dat-bl",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sn01",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/virtualNetworks/sapanvnet-1/subnets/sapansnet-1",
            "name": "sapansnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sapanrg-1",
            "virtual_network_name": "sapanvnet-1"
          }
        }
      ]
    },
    {
      "module": "module.ni-module",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ni01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkInterfaces/sapanni-1",
            "internal_domain_name_suffix": "biovut2ldrvezefw2sce5ogrga.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "sapanip-1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/publicIPAddresses/sapanpip-1",
                "subnet_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/virtualNetworks/sapanvnet-1/subnets/sapansnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "60-45-BD-09-93-09",
            "name": "sapanni-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "sapanrg-1",
            "virtual_machine_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Compute/virtualMachines/sapanvm-1"
          },
          "dependencies": [
            "module.ni-module.data.azurerm_public_ip.pip-dat-bl",
            "module.ni-module.data.azurerm_subnet.snet-dat-bl",
            "module.rg-module.azurerm_resource_group.rg-block",
            "module.sn-module.azurerm_subnet.subnet-block",
            "module.vn-module.azurerm_virtual_network.vnet-block"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkSecurityGroups/sapannsg-1",
            "location": "westus",
            "name": "sapannsg-1",
            "resource_group_name": "sapanrg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ni-module.azurerm_network_interface.ni-block",
            "module.ni-module.data.azurerm_public_ip.pip-dat-bl",
            "module.ni-module.data.azurerm_subnet.snet-dat-bl",
            "module.rg-module.azurerm_resource_group.rg-block",
            "module.sn-module.azurerm_subnet.subnet-block",
            "module.vn-module.azurerm_virtual_network.vnet-block"
          ]
        }
      ]
    },
    {
      "module": "module.nsgni-module",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "data-bl-ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgni01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkInterfaces/sapanni-1",
            "ip_configuration": [
              {
                "name": "sapanip-1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/publicIPAddresses/sapanpip-1",
                "subnet_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/virtualNetworks/sapanvnet-1/subnets/sapansnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "60-45-BD-09-93-09",
            "name": "sapanni-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "sapanrg-1",
            "virtual_machine_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Compute/virtualMachines/sapanvm-1"
          }
        }
      ]
    },
    {
      "module": "module.nsgni-module",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "data-bl-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgni01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkSecurityGroups/sapannsg-1",
            "location": "westus",
            "name": "sapannsg-1",
            "resource_group_name": "sapanrg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nsgni-module",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg-asso-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgni01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkInterfaces/sapanni-1|/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkSecurityGroups/sapannsg-1",
            "network_interface_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkInterfaces/sapanni-1",
            "network_security_group_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkSecurityGroups/sapannsg-1"
          },
          "dependencies": [
            "module.ni-module.azurerm_network_interface.ni-block",
            "module.ni-module.data.azurerm_public_ip.pip-dat-bl",
            "module.ni-module.data.azurerm_subnet.snet-dat-bl",
            "module.nsg-module.azurerm_network_security_group.nsg-block",
            "module.nsgni-module.data.azurerm_network_interface.data-bl-ni",
            "module.nsgni-module.data.azurerm_network_security_group.data-bl-nsg",
            "module.rg-module.azurerm_resource_group.rg-block",
            "module.sn-module.azurerm_subnet.subnet-block",
            "module.vn-module.azurerm_virtual_network.vnet-block"
          ]
        }
      ]
    },
    {
      "module": "module.pi-module",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pi01",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/publicIPAddresses/sapanpip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.91.220.164",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "sapanpip-1",
            "resource_group_name": "sapanrg-1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-block"
          ]
        }
      ]
    },
    {
      "module": "module.sn-module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sn01",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/virtualNetworks/sapanvnet-1/subnets/sapansnet-1",
            "name": "sapansnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sapanrg-1",
            "virtual_network_name": "sapanvnet-1"
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-block",
            "module.vn-module.azurerm_virtual_network.vnet-block"
          ]
        }
      ]
    },
    {
      "module": "module.vm-module",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "ni-data-bl",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ni01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/networkInterfaces/sapanni-1",
            "ip_configuration": [
              {
                "name": "sapanip-1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/publicIPAddresses/sapanpip-1",
                "subnet_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/virtualNetworks/sapanvnet-1/subnets/sapansnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "60-45-BD-09-93-09",
            "name": "sapanni-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "sapanrg-1",
            "virtual_machine_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Compute/virtualMachines/sapanvm-1"
          }
        }
      ]
    },
    {
      "module": "module.vn-module",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vn01",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4f5a1d0a-1c8b-4c6a-90b6-e4844fb8d130",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/virtualNetworks/sapanvnet-1",
            "location": "westus",
            "name": "sapanvnet-1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "sapanrg-1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/sapanrg-1/providers/Microsoft.Network/virtualNetworks/sapanvnet-1/subnets/sapansnet-1",
                "name": "sapansnet-1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-block"
          ]
        }
      ]
    }
  ]
}